src/traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mingress
  namespace: mnamespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: www.bugday.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mservice
            port:
              number: 80
