src/traefik/traefik-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.ctistraefik.com`)
      kind: Rule
      services:
        - name: api@internal
          port: 80
